# main_page

./: .gitignore  LICENSE  Pipfile  README.rst  pyproject.toml  setup.py
main_page/: __init__.py  asgi.py  urls.py  wsgi.py
main_page/settings/: settings.py
scripts/: manage.py
src/main_effect/: manage.py
src/main_effect/main_effect/: asgi.py  settings.py  urls.py  wsgi.py
src/main_effect/users/migrations/: 0001_initial.py
