[tool.poetry]
name = "main.effect"
version = "0.0.0"
description = ""
authors = ["demaxed <demyanenkomaxim22@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "3.1"
django-environ = "^0.4.5"
psycopg2-binary = "^2.8.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
